<resources>
    <string name="app_name">REA Hometime</string>
    <string name="clear">Clear</string>
    <string name="load">Load</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="no_available_time_for_north">No available time for North</string>
    <string name="no_available_time_for_south">No available time for South</string>

    <string name="loading">Loading...</string>
    <string name="start_load">Start loading</string>
    <string name="clear_time">Clear time and stop loading</string>
</resources>