<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="onLoadClicked"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClearClicked"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.example.reahometime.MainViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rea_red"
            android:padding="@dimen/page_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/title_text_size"
                android:layout_marginHorizontal="@dimen/page_horizontal_margin"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{onClearClicked}"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/title_text_size"
                android:layout_marginHorizontal="@dimen/page_horizontal_margin"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{onLoadClicked}"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/northPanel"
            android:layout_below="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="@dimen/page_horizontal_margin">

            <TextView
                android:id="@+id/northTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/black"
                android:text="@string/north"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/northList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/northTitle"
                android:layout_marginTop="@dimen/page_vertical_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                visibleWithListForRl="@{viewModel.hometimesNorth}"
                tools:listitem="@layout/list_item_hometime"/>

            <TextView
                android:layout_below="@+id/northTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_vertical_margin"
                android:text="@string/no_available_time_for_north"
                android:textSize="@dimen/content_text_size"
                visibleWithListForTv="@{viewModel.hometimesNorth}"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/southPanel"
            android:layout_below="@+id/northPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="@dimen/page_horizontal_margin">

            <TextView
                android:id="@+id/southTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/black"
                android:text="@string/south"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/southList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/southTitle"
                android:layout_marginTop="@dimen/page_vertical_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                visibleWithListForRl="@{viewModel.hometimesSouth}"
                tools:listitem="@layout/list_item_hometime"/>

            <TextView
                android:layout_below="@+id/southTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_vertical_margin"
                android:text="@string/no_available_time_for_south"
                android:textSize="@dimen/content_text_size"
                visibleWithListForTv="@{viewModel.hometimesSouth}"/>

        </RelativeLayout>

    </RelativeLayout>


</layout>